grid-menu icon, colour fixes, kitchen sink updated

--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -701,7 +701,7 @@
     <ul class="uq-grid-menu">
       <li class="uq-grid-menu__item">
         <a href="#" class="uq-grid-menu__link">
-          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__icon uq-icon uq-icon--other--hotel-bedroom-1"></span>
           <span class="uq-grid-menu__title">Menu link 1</span>
           <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
             luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -710,7 +710,7 @@
       </li>
       <li class="uq-grid-menu__item">
         <a href="#" class="uq-grid-menu__link">
-          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__icon uq-icon uq-icon--education--mortarboard"></span>
           <span class="uq-grid-menu__title">Menu link 2</span>
           <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
             luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -719,7 +719,7 @@
       </li>
       <li class="uq-grid-menu__item">
         <a href="#" class="uq-grid-menu__link">
-          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__icon uq-icon uq-icon--engineering-and-computing--construction-building"></span>
           <span class="uq-grid-menu__title">Menu link 3</span>
           <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
             luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -728,15 +728,16 @@
       </li>
       <li class="uq-grid-menu__item">
         <a href="#" class="uq-grid-menu__link">
-          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__icon uq-icon uq-icon--standard--region-domestic"></span>
           <span class="uq-grid-menu__title">Menu link 4</span>
-          <span class="uq-grid-menu__description">Ullamcorper est sodales.
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
           </span>
         </a>
       </li>
       <li class="uq-grid-menu__item">
         <a href="#" class="uq-grid-menu__link">
-          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__icon uq-icon uq-icon--standard--region-international"></span>
           <span class="uq-grid-menu__title">Menu link 5</span>
           <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
             luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -750,7 +751,7 @@
     <ul class="uq-grid-menu uq-grid-menu--dark-text">
       <li class="uq-grid-menu__item">
         <a href="#" class="uq-grid-menu__link">
-          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__icon uq-icon uq-icon--other--hotel-bedroom-1"></span>
           <span class="uq-grid-menu__title">Menu link 1</span>
           <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
             luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -759,7 +760,7 @@
       </li>
       <li class="uq-grid-menu__item">
         <a href="#" class="uq-grid-menu__link">
-          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__icon uq-icon uq-icon--other--hotel-bedroom-1"></span>
           <span class="uq-grid-menu__title">Menu link 2</span>
           <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
             luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -768,7 +769,7 @@
       </li>
       <li class="uq-grid-menu__item">
         <a href="#" class="uq-grid-menu__link">
-          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__icon uq-icon uq-icon--other--hotel-bedroom-1"></span>
           <span class="uq-grid-menu__title">Menu link 3</span>
           <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
             luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -777,15 +778,16 @@
       </li>
       <li class="uq-grid-menu__item">
         <a href="#" class="uq-grid-menu__link">
-          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__icon uq-icon uq-icon--other--hotel-bedroom-1"></span>
           <span class="uq-grid-menu__title">Menu link 4</span>
-          <span class="uq-grid-menu__description">Ullamcorper est sodales.
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
           </span>
         </a>
       </li>
       <li class="uq-grid-menu__item">
         <a href="#" class="uq-grid-menu__link">
-          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__icon uq-icon uq-icon--other--hotel-bedroom-1"></span>
           <span class="uq-grid-menu__title">Menu link 5</span>
           <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
             luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
