comp imgs categorised in folders, names changed

--- a/packages/storybook-html/src/components/sections/sections.html
+++ b/packages/storybook-html/src/components/sections/sections.html
@@ -63,7 +63,7 @@
 </div>
 
 <div class="uq-section uq-section--centered uq-section--image-behind uq-section--light-text light-palette">
-  <div class="uq-section__background"><img src="/images/uq-image-01.jpeg" /></div>
+  <div class="uq-section__background"><img src="/images/section/section-example-01.jpeg" /></div>
 
   <div class="uq-section__container">
     <div class="uq-section__header">
@@ -80,7 +80,7 @@
   </div>
 </div>
 
-<div class="uq-section uq-section--centered uq-section--background-image uq-section--light-tint uq-section--dark-text" style="background-image: url('/images/uq-image-01.jpeg');">
+<div class="uq-section uq-section--centered uq-section--background-image uq-section--light-tint uq-section--dark-text" style="background-image: url('/images/section/section-example-01.jpeg');">
   <div class="uq-section__container">
     <div class="uq-section__header">
       <h2 class="uq-section__title">Section title</h2>
@@ -96,7 +96,7 @@
   </div>
 </div>
 
-<div class="uq-section uq-section--centered uq-section--background-image uq-section--dark-tint uq-section--light-text light-palette" style="background-image: url('/images/uq-image-01.jpeg');">
+<div class="uq-section uq-section--centered uq-section--background-image uq-section--dark-tint uq-section--light-text light-palette" style="background-image: url('/images/section/section-example-01.jpeg');">
   <div class="uq-section__container">
     <div class="uq-section__header">
       <h2 class="uq-section__title">Section title</h2>
