Color Prim, Seco (Light, Dark) categorise

--- a/packages/button/src/scss/_global.scss
+++ b/packages/button/src/scss/_global.scss
@@ -21,6 +21,6 @@ $button-secondary-border-hover-color: core.$uq-neutral-dark20 !default; //bdb0a5
 $button-purple-color: core.$uq-white !default;
 $button-purple-hover-color: core.$uq-white !default;
 $button-purple-bg-color: core.$uq-purple !default;
-$button-purple-bg-hover-color: core.$uq-purple-dark !default;
+$button-purple-bg-hover-color: core.$uq-purple-dark10 !default;
 $button-purple-border-color: core.$uq-purple !default;
-$button-purple-border-hover-color: core.$uq-purple-dark !default;
+$button-purple-border-hover-color: core.$uq-purple-dark10 !default;
