--- a/packages/core/src/scss/_partials/_colour-constants.scss
+++ b/packages/core/src/scss/_partials/_colour-constants.scss
@@ -7,10 +7,17 @@
     @return mix(black, $color, $percentage);
 }
 
+
+
 // UQ Primary palette
 $uq-purple: #51247A;
 $uq-black: #000;
 $uq-white: #fff;
+
+// UQ Primary - Darken
+$uq-purple-dark10: darken($uq-purple, 10%); //#49206c;
+
+
 
 // UQ Secondary palette
 $uq-purple-light: #962A8B;
@@ -22,39 +29,42 @@ $uq-blue: #4085C6;
 $uq-aqua: #00A2C7;
 $uq-green: #2EA836;
 
-// UQ Neutral palette
-$uq-neutral: #D7D1CC;
-$uq-darkgrey: #999490;
-
-// UQ Primary - Darken
-$uq-purple-dark10: darken($uq-purple, 10%); //#49206c;
-
 // UQ Secondary - Darken
 $uq-red-dark10: darken($uq-red, 10%); //#be1b38;
 $uq-red-dark20: darken($uq-red, 20%); //#9b1129;
 
 $uq-green-dark10: darken($uq-green, 10%);
 
+
+
+// UQ Neutral palette
+$uq-neutral: #D7D1CC;
+$uq-darkgrey: #999490;
+
 // UQ Neutral - Tint
-$uq-neutral-light20: #f7f6f5;
-$uq-neutral-light40: #efedeb;
-$uq-neutral-light60: #e7e3e0;
-$uq-neutral-light80: #dfdad6;
+$uq-neutral-light20: tint($uq-neutral, 20%); //#dfdad6;
+$uq-neutral-light40: tint($uq-neutral, 40%); //#e7e3e0;
+$uq-neutral-light60: tint($uq-neutral, 60%); //#efedeb;
+$uq-neutral-light80: tint($uq-neutral, 80%); //#f7f6f5;
 
 // UQ Neutral - Shade
-$uq-neutral-dark20: #aca7a3;
-$uq-neutral-dark40: #817d7a;
-$uq-neutral-dark60: #565452;
-$uq-neutral-dark80: #2b2a29;
+$uq-neutral-dark20: shade($uq-neutral, 20%); //#aca7a3;
+$uq-neutral-dark40: shade($uq-neutral, 40%); //#817d7a;
+$uq-neutral-dark60: shade($uq-neutral, 60%); //#565452;
+$uq-neutral-dark80: shade($uq-neutral, 80%); //#2b2a29;
 
 // UQ Darkgrey - Tint
-$uq-darkgrey-light20: #ebeae9;
-$uq-darkgrey-light40: #d6d4d3;
-$uq-darkgrey-light60: #c2bfbc;
-$uq-darkgrey-light80: #ada9a6;
+$uq-darkgrey-light20: tint($uq-neutral, 20%); //#ada9a6;
+$uq-darkgrey-light40: tint($uq-neutral, 40%); //#c2bfbc;
+$uq-darkgrey-light60: tint($uq-neutral, 60%); //#d6d4d3;
+$uq-darkgrey-light80: tint($uq-neutral, 80%); //#ebeae9;
+
+
 
 // UQ Purple gradient
 $uq-purple-gradient: linear-gradient(90deg, $uq-purple 0%, 87%, $uq-purple-light 100%);
+
+
 
 // Default text, Content
 $text: $uq-neutral-dark80;
@@ -69,13 +79,13 @@ $alert: $uq-red-dark10;
 $success: $uq-green-dark10;
 
 // Alerts and Status - Light
-$info-color: #d4f0ff;
-$success-color: #d5eeca;
-$warning-color: #ffe0ad;
-$danger-color: #ffacac;
+$info-color: lighten($uq-blue, 40%); //#d4f0ff;
+$success-color: lighten($uq-green, 50%); //#d5eeca;
+$warning-color: lighten($uq-yellow, 30%); //#ffe0ad;
+$danger-color: lighten($uq-red, 30%); //#ffacac;
 
 // Palettes
-$light-palette-color: $uq-neutral-light20;
+$light-palette-color: $uq-neutral-light80;
 $light-palette-border-color: rgba($uq-white, .4);
 $light-palette-link-color: $uq-white;
 $light-palette-bg: $uq-white;
