--- a/packages/storybook-html/src/components/core/_colour.scss
+++ b/packages/storybook-html/src/components/core/_colour.scss
@@ -168,16 +168,16 @@
 
   /* Alerts */
   .uqds-colour--info{
-    background-color: $info-color;
+    background-color: $info-light;
   }
   .uqds-colour--success{
-    background-color: $success-color;
+    background-color: $success-light;
   }
   .uqds-colour--warning{
-    background-color: $warning-color;
+    background-color: $warning-light;
   }
   .uqds-colour--danger{
-    background-color: $danger-color;
+    background-color: $alert-light;
   }
 
 
