--- a/packages/storybook-html/.storybook/custom/components/StatusBadge.scss
+++ b/packages/storybook-html/.storybook/custom/components/StatusBadge.scss
@@ -17,30 +17,30 @@
 
   // Status tags for Documentation
   &--draftDoc {
-    border: 2px solid core.$danger-color;
+    border: 2px solid core.$alert-light;
     background-color: transparent;
   }
   &--reviewDoc {
-    border: 2px solid core.$warning-color;
+    border: 2px solid core.$warning-light;
     background-color: transparent;
   }
   &--stableDoc {
-    border: 2px solid core.$success-color;
+    border: 2px solid core.$success-light;
     background-color: transparent;
   }
 
   // Status tags for components
   &--stable {
-    background-color: core.$success-color;
+    background-color: core.$success-light;
   }
 
   &--development,
   &--experiment {
-    background-color: core.$danger-color;
+    background-color: core.$alert-light;
   }
 
   &--review {
-    background-color: core.$warning-color;
+    background-color: core.$warning-light;
   }
 
   &--deprecated {
