--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -13,7 +13,7 @@ $form-label-size: core.$font-size-s;
 $form-placeholder-color: core.$uq-neutral-dark40;
 $form-spacing: core.$space;
 $form-text-color: core.$text;
-$form-text-size: core.$font-size-m;
+$form-text-size: core.$font-size;
 
 // Select
 $form-select-icon: core.$uq-purple;
