--- a/packages/pagination/src/scss/_component.scss
+++ b/packages/pagination/src/scss/_component.scss
@@ -13,7 +13,7 @@
 			color: core.$link;
 			font-size: 1rem;
 			font-weight: 300;
-			padding: core.$space-none core.$space-sm;
+			padding: core.$space-none core.$space-s;
 			text-decoration: none;
 
 			&:hover {
