--- a/packages/sections/src/scss/_component.scss
+++ b/packages/sections/src/scss/_component.scss
@@ -172,7 +172,7 @@
 
   &__footer {
     color: $section-footer-color;
-    margin-top: core.$space-lg;
+    margin-top: core.$space-l;
   }
 
   &__title {
