--- a/packages/storybook-html/src/patterns/form-validation/examples/password-reset.scss
+++ b/packages/storybook-html/src/patterns/form-validation/examples/password-reset.scss
@@ -26,7 +26,7 @@
 
   &-indicator {
     font-size: 0;
-    line-height: core.$font-size-m * core.$line-height;
+    line-height: core.$font-size * core.$line-height;
     white-space: nowrap;
 
     span {
