--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -11,10 +11,10 @@
   cursor: pointer;
   display: inline-block;
   font-family: $button-font;
-  font-size: core.$font-size-m;
+  font-size: core.$font-size;
   font-weight: normal;
   line-height: normal;
-  padding: core.$space-sm core.$space-md;
+  padding: core.$space-s core.$space-m;
   position: relative;
   text-align: center;
   text-decoration: none;
@@ -164,16 +164,16 @@
   /* button sizes */
   &--tiny {
     font-size: core.$font-size-xs;
-    padding: core.$space-xs core.$space-sm;
+    padding: core.$space-xs core.$space-s;
   }
 
   &--small {
     font-size: core.$font-size-s;
-    padding: core.$space-sm core.$space;
+    padding: core.$space-s core.$space;
   }
 
   &--large {
-    font-size: core.$font-size-l;
+    font-size: core.$font-size-m;
     padding: core.$space core.$space-xl;
   }
 
