--- a/packages/grid-menu/src/scss/_component.scss
+++ b/packages/grid-menu/src/scss/_component.scss
@@ -41,7 +41,7 @@
     font-size: 1.375rem;
     font-weight: 400;
     line-height: normal;
-    padding: core.$space core.$space-lg core.$space core.$space;
+    padding: core.$space core.$space-l core.$space core.$space;
     position: relative;
     height: 100%;
 
@@ -100,7 +100,7 @@
 
   &__icon {
     margin-top: -0.3rem;
-    margin-right: core.$space-sm;
+    margin-right: core.$space-s;
     transition: filter 0.2s;
   }
 
