--- a/packages/pane/src/scss/_global.scss
+++ b/packages/pane/src/scss/_global.scss
@@ -22,7 +22,7 @@ $pane-title-color: core.$uq-purple;
   }
   
   @mixin pane-vertical-spacing {
-    margin: core.$space-lg core.$space-none;
+    margin: core.$space-l core.$space-none;
   }
   
   @mixin pane-dark-tint {
@@ -40,12 +40,12 @@ $pane-title-color: core.$uq-purple;
   
     .uq-pane {
         &__content {
-            padding: core.$space-md core.$space-md core.$space core.$space-md; //1.8rem 1.8rem 1rem 1.8rem
+            padding: core.$space-m core.$space-m core.$space core.$space-m; //1.8rem 1.8rem 1rem 1.8rem
         }
   
         &__footer {
             background-color: $pane-shaded-bg;
-            padding: core.$space-md; //1.8rem;
+            padding: core.$space-m; //1.8rem;
         }
     }
   }
