--- a/packages/side-nav/src/scss/_global.scss
+++ b/packages/side-nav/src/scss/_global.scss
@@ -3,4 +3,4 @@
 $sidenav-list-item-bg: core.$uq-neutral-light20;
 $sidenav-list-item-active-bg: core.$uq-neutral-light60;
 $sidenav-list-item-divider: core.$uq-neutral-light60;
-$sidenav-list-item-animation-distance: core.$space-sm;
+$sidenav-list-item-animation-distance: core.$space-s;
