--- a/packages/storybook-html/src/components/grid/grid.scss
+++ b/packages/storybook-html/src/components/grid/grid.scss
@@ -9,7 +9,7 @@
     core.$uq-neutral-light20 10px,
     core.$uq-neutral-light20 20px
   );
-  padding: core.$space-md 0;
+  padding: core.$space-m 0;
   overflow: visible;
 
   &--wrap-content {
