--- a/packages/storybook-html/src/docs/layout/layout.scss
+++ b/packages/storybook-html/src/docs/layout/layout.scss
@@ -101,15 +101,15 @@
 
     @media #{core.$screen-md-up} {
       &::before {
-        left: core.$space-md / 2;
-        right: core.$space-md / 2;
+        left: core.$space-m / 2;
+        right: core.$space-m / 2;
       }
     }
 
     @media #{core.$screen-xl-up} {
       &::before {
-        left: core.$space-lg / 2;
-        right: core.$space-lg / 2;
+        left: core.$space-l / 2;
+        right: core.$space-l / 2;
       }
     }
   }
