--- a/packages/table/src/scss/_global.scss
+++ b/packages/table/src/scss/_global.scss
@@ -35,7 +35,7 @@
     border-spacing: 0;
     box-sizing: border-box;
     font-family: core.$font-body;
-    font-size: core.$font-size-m;
+    font-size: core.$font-size;
     font-weight: core.$font-weight-normal;
     line-height: core.$line-height;
     color: core.$uq-neutral-dark80;
@@ -66,12 +66,12 @@
     display: table-row;
 }
 @mixin table-cell {
-    padding: core.$space-sm core.$space;
+    padding: core.$space-s core.$space;
     border: 1px solid core.$uq-neutral;
     text-align: left;
 }
 @mixin table-header {
-    padding: core.$space-sm core.$space;
+    padding: core.$space-s core.$space;
     color: core.$uq-purple;
     text-align: left;
     border: 1px solid core.$uq-neutral;
