--- a/packages/tabs/src/scss/_component.scss
+++ b/packages/tabs/src/scss/_component.scss
@@ -27,12 +27,12 @@
   &__link {
     display: inline;
     margin-left: auto;
-    padding: core.$space-none core.$space-md;
+    padding: core.$space-none core.$space-m;
     align-self: center;
     white-space: nowrap;
 
     @media #{core.$screen-md-up} {
-      padding: core.$space-none core.$space-lg;
+      padding: core.$space-none core.$space-l;
     }
   }
 
@@ -40,9 +40,9 @@
   &__tab {
     position: relative;
     flex: 0 1 auto;
-    padding: core.$space core.$space-md;
+    padding: core.$space core.$space-m;
     margin-right: core.$space-xs;
-    font-size: core.$font-size-m;
+    font-size: core.$font-size;
     font-weight: core.$font-weight-thin;
     color: core.$uq-neutral-dark80;
     background-color: core.$uq-white;
@@ -53,9 +53,9 @@
     cursor: pointer;
 
     @media #{core.$screen-md-up} {
-      padding: core.$space-md core.$space-lg;
+      padding: core.$space-m core.$space-l;
       margin-right: core.$space-xs;
-      font-size: core.$font-size-l;
+      font-size: core.$font-size-m;
     }
 
     &:last-child {
@@ -81,7 +81,7 @@
 
     > span.uq-icon {
       display: block;
-      margin: 0 auto core.$space-sm;
+      margin: 0 auto core.$space-s;
       font-size: core.$font-size-xs;
 
       @media #{core.$screen-md-up} {
@@ -93,13 +93,13 @@
 
   // tab panel
   &__tab-panel {
-    padding: core.$space core.$space-md;
-    font-size: core.$font-size-m;
+    padding: core.$space core.$space-m;
+    font-size: core.$font-size;
     color: core.$uq-neutral-dark80;
     background-color: core.$uq-white;
 
     @media #{core.$screen-md-up} {
-      padding: core.$space-md core.$space-lg;
+      padding: core.$space-m core.$space-l;
     }
   }
 
@@ -171,17 +171,17 @@
   // Small variant
   &.uq-tabs--small {
     .uq-tabs__tab {
-      padding: core.$space-sm core.$space;
+      padding: core.$space-s core.$space;
 
       @media #{core.$screen-md-up} {
-        padding: core.$space core.$space-md;
+        padding: core.$space core.$space-m;
       }
     }
     .uq-tabs__tab-panel {
-      padding: core.$space-sm core.$space;
+      padding: core.$space-s core.$space;
   
       @media #{core.$screen-md-up} {
-        padding: core.$space core.$space-md;
+        padding: core.$space core.$space-m;
       }
     }
   }
