--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -804,43 +804,43 @@
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6">
     <h2>Panes</h2>
-    <div class="pane">
-      <h3 class="pane__title">Pane title</h3>
+    <div class="uq-pane">
+      <h3 class="uq-pane__title">Pane title</h3>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
 
-    <div class="pane pane--shaded">
-      <h3 class="pane__title">Pane title (shaded)</h3>
+    <div class="uq-pane uq-pane--shaded">
+      <h3 class="uq-pane__title">Pane title (shaded)</h3>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
 
-    <div class="pane pane--white">
-      <h3 class="pane__title">Pane title (white)</h3>
+    <div class="uq-pane uq-pane--white">
+      <h3 class="uq-pane__title">Pane title (white)</h3>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
 
-    <div class="pane pane--outline">
-      <h3 class="pane__title">Pane title (outline)</h3>
+    <div class="uq-pane uq-pane--outline">
+      <h3 class="uq-pane__title">Pane title (outline)</h3>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
 
-    <div class="pane pane--ruled">
-      <h3 class="pane__title">Pane title (ruled)</h3>
+    <div class="uq-pane uq-pane--ruled">
+      <h3 class="uq-pane__title">Pane title (ruled)</h3>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
 
-    <div class="pane pane--dark-tint">
-      <h3 class="pane__title">Pane title (ruled)</h3>
+    <div class="uq-pane uq-pane--dark-tint">
+      <h3 class="uq-pane__title">Pane title (ruled)</h3>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
 
-    <div class="pane pane--has-footer">
-      <div class="pane__content">
-        <h3 class="pane__title">Pane title (has footer)</h3>
-        <div class="pane__sub-title">A sub title</div>
+    <div class="uq-pane uq-pane--has-footer">
+      <div class="uq-pane__content">
+        <h3 class="uq-pane__title">Pane title (has footer)</h3>
+        <div class="uq-pane__sub-title">A sub title</div>
         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="pane__footer">
+      <div class="uq-pane__footer">
         This is a pane footer
       </div>
     </div>
